--- a/catalog-service.properties
+++ b/catalog-service.properties
@@ -1,8 +1,8 @@
-logging.level.com.sivalabs=debug
+logging.level.com.vicitritellacarmida=debug
  
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/catalog?useSSL=false
-spring.datasource.username=root
+spring.datasource.username=catalog
 spring.datasource.password=admin
  
 spring.datasource.initialization-mode=always
