--- a/catalog-service.properties
+++ b/catalog-service.properties
@@ -8,3 +8,5 @@ spring.datasource.password=admin
 spring.datasource.initialization-mode=always
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
